<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/app_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_passport" />

        <com.project.ui.customcomponent.UPSTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_larger"
            android:gravity="center"
            android:padding="@dimen/space_normal"
            android:text="@string/create_a_personal_acc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ultra_text_size" />

        <com.project.ui.customcomponent.UPSTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/to_user_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_logo_faster_pay" />

        <EditText
            android:id="@+id/edtSignUpEmail"
            style="@style/edt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_ultra"
            android:background="@drawable/bg_login"
            android:ellipsize="end"
            android:hint="@string/email_title"
            android:maxLines="1"
            android:padding="@dimen/space_large"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/large_text_size" />

        <EditText
            android:id="@+id/edtSignUpPassword"
            style="@style/edt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_ultra"
            android:background="@drawable/bg_login"
            android:ellipsize="end"
            android:hint="@string/create_password_title"
            android:maxLines="1"
            android:padding="@dimen/space_large"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/large_text_size" />

        <com.project.ui.customcomponent.UPSTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_larger"
            android:textSize="@dimen/small_text_size"
            android:textColor="@android:color/white"
            android:text="@string/rule_password"/>

        <EditText
            android:id="@+id/edtSignUpFirstName"
            style="@style/edt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_login"
            android:ellipsize="end"
            android:hint="@string/legal_first_name"
            android:maxLines="1"
            android:padding="@dimen/space_large"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/large_text_size" />

        <EditText
            android:id="@+id/edtSignUpLastName"
            style="@style/edt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_ultra"
            android:background="@drawable/bg_login"
            android:ellipsize="end"
            android:hint="@string/legal_last_name"
            android:maxLines="1"
            android:padding="@dimen/space_large"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/large_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_ultra">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/btnPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.project.ui.customcomponent.UPSTextView
                android:id="@+id/textPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:text="@string/policy"
                android:textColor="@android:color/white"
                android:padding="@dimen/space_normal"/>
        </LinearLayout>

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_btn_nagative"
            android:text="@string/sign_up_title" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_larger"
            android:background="@drawable/bg_btn_positive"
            android:text="@string/login_title"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>