<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_20">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/space_ultra"
            android:src="@drawable/ic_login_logo" />

        <com.project.ui.customcomponent.UPSTextView
            android:id="@+id/signInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_in_title"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/signInTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/space_ultra"
            android:src="@drawable/ic_line" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/line"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/space_ultra"
            android:src="@drawable/ic_logo_faster" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtLoginEmail"
            style="@style/edt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:padding="@dimen/space_large"
            android:hint="@string/email_title"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/large_text_size"
            android:background="@drawable/bg_login"
            android:ellipsize="end"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_login"
            android:padding="@dimen/space_small">

            <EditText
                android:id="@+id/edtLoginPassword"
                style="@style/edt_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="@dimen/space_large"
                android:layout_weight="1"
                android:ellipsize="end"
                android:textSize="@dimen/large_text_size"
                android:hint="@string/password_title"
                android:textColorHint="@android:color/white"
                android:maxLines="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/space_normal"
                android:src="@drawable/ic_touch_id" />
        </LinearLayout>

        <com.project.ui.customcomponent.UPSTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_ultra"
            android:text="@string/forgot_pass_title"
            android:textColor="@color/yellow"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_btn_nagative"
            android:text="@string/login_title" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_edt"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_larger"
            android:background="@drawable/bg_btn_positive"
            android:text="@string/sign_up_title"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>