<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:alpha="0.85"
    android:background="@drawable/bg_header_wallet">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fill_color"/>

    <RelativeLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_arrow"
            android:padding="@dimen/space_larger"
            android:layout_centerVertical="true"/>

        <com.project.ui.customcomponent.UPSTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_title"
            android:textSize="@dimen/special_text_size"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbar"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPayment"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_google_play"
                android:layout_margin="@dimen/space_payment"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_payment"
                android:paddingBottom="200dp"
                android:orientation="vertical">
                <com.project.ui.customcomponent.UPSTextView
                    android:id="@+id/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="DOTA 2"
                    android:paddingStart="@dimen/space_20"
                    android:paddingEnd="@dimen/space_20"
                    android:layout_marginTop="@dimen/ultra_text_size"
                    android:textSize="@dimen/large_text_size" />
                <com.project.ui.customcomponent.UPSTextView
                    android:id="@+id/paymentCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_normal"
                    android:paddingStart="@dimen/space_20"
                    android:paddingEnd="@dimen/space_20"
                    android:textSize="@dimen/large_text_size"
                    tools:text="Steam"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_divider_height"
                    android:background="#D8D8D8"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/space_large"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/space_20">
                    <com.project.ui.customcomponent.UPSTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_text_size"
                        android:textColor="#728497"
                        android:text="@string/total_amount"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.project.ui.customcomponent.UPSTextView
                            android:id="@+id/totalAmount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/special_text_size"
                            android:paddingTop="@dimen/space_normal"
                            android:paddingBottom="@dimen/space_normal"
                            android:paddingEnd="@dimen/activity_horizontal_margin"
                            android:paddingStart="0dp"
                            android:textStyle="bold"
                            tools:text="$ 1000"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_right_arrow"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <com.project.ui.customcomponent.UPSTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_text_size"
                        android:textColor="#728497"
                        android:layout_marginTop="@dimen/space_larger"
                        android:text="@string/sub_total"/>

                    <com.project.ui.customcomponent.UPSTextView
                        android:id="@+id/subTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:font_values="Nunito-Bold.ttf"
                        tools:text="$ 1000 USD"/>

                    <com.project.ui.customcomponent.UPSTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_text_size"
                        android:textColor="#728497"
                        android:layout_marginTop="@dimen/space_normal"
                        android:text="@string/fee"/>

                    <com.project.ui.customcomponent.UPSTextView
                        android:id="@+id/fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:font_values="Nunito-Bold.ttf"
                        tools:text="$ 1000 USD"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_ultra"
                        android:layout_marginBottom="50dp">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:orientation="vertical">
                            <com.project.ui.customcomponent.UPSTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#728497"
                                android:layout_marginTop="@dimen/space_normal"
                                android:textSize="@dimen/small_text_size"
                                android:text="@string/default_payment_method"/>

                            <com.project.ui.customcomponent.UPSTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/ultra_text_size"
                                android:textStyle="bold"
                                android:text="FasterPay"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:orientation="vertical">
                            <com.project.ui.customcomponent.UPSTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#728497"
                                android:layout_marginTop="@dimen/space_normal"
                                android:textSize="@dimen/small_text_size"
                                android:text="@string/available_balance"/>

                            <com.project.ui.customcomponent.UPSTextView
                                android:id="@+id/currentAvailable"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/ultra_text_size"
                                app:font_values="Nunito-Bold.ttf"
                                tools:text="$ 100"/>

                            <com.project.ui.customcomponent.UPSTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#2D8BE3"
                                android:layout_marginTop="@dimen/space_larger"
                                android:textSize="@dimen/large_text_size"
                                android:text="@string/change"/>
                        </LinearLayout>
                    </LinearLayout>
                    <Button
                        android:id="@+id/btnPayment"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_login_edt"
                        tools:text="Pay $ 1500"
                        android:layout_margin="@dimen/space_large"
                        android:textSize="@dimen/ultra_text_size"
                        android:background="@drawable/bg_btn_nagative"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>